--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="header-content">
             <!-- Add your profile picture here -->
             <img src="./photo.jpg.jpg" alt="Your Profile Picture" class="profile-picture">
-            <h1>Haritha V</h1>
+            <h1>leena I</h1>
             <p>Student</p>
         </div>
     </header>
@@ -199,3 +199,4 @@
 </body>
 
 </html>
+
