--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="resume.png">Download CV</a>
+            <a href="resume.jpg">Download CV</a>
         </center>
         </div>
         
@@ -199,3 +199,4 @@
 </body>
 
 </html>
+
